# TinyInference

./: .gitignore  README.md  mycmd.py  pyproject.toml
xinference_demo/: __init__.py  constants.py  utils.py
xinference_demo/api/: restful_api.py
xinference_demo/core/: resource.py  supervisor.py  utils.py  worker.py
xinference_demo/deploy/: cmdline.py  local.py  utils.py  worker.py
xinference_demo/model/llm/: llm_family.py
