[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["ruyi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
click = "^8.1.7"
xoscar = "^0.2.1"
fastapi = "^0.109.0"
orjson = "^3.9.12"
aioprometheus = "^23.12.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
